# provchain-org2

./: .gitignore  .gitmodules  .qwenrc  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CODEBASE_IMPROVEMENTS_SUMMARY.md  CODE_REVIEW_PRODUCTION_FEATURES.md  CONTRIBUTING.md  Cargo.toml  FILE_ORGANIZATION.md  FRONTEND_CURRENT_STATE_SUMMARY.md  FRONTEND_TEST_RESULTS.md  GRAPHCHAIN_COMPARISON.md  HYBRID_CANONICALIZATION_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  ONTOLOGY_INTEGRATION_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_TEST_SUITE_DOCUMENTATION.md  PHASE4_TEST_SUITE_DOCUMENTATION.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_TEST_SUITE_DOCUMENTATION.md  PRODUCTION_TESTING_PLAN.md  Plan.md  QWEN.md  RDF_CANONICALIZATION_COMPARISON.md  README.md  Run.md  SECURITY.md  SECURITY_SETUP.md  STORAGE_MIGRATION_DOCUMENTATION.md  TESTING_RESULTS_DETAILED_REVIEW.md  TESTING_SUMMARY.md  UI_README.md  config.toml  demo_ui.rs  implementation_plan.md  libowl_adapter.rlib  package-lock.json  test_frontend_backend_connection.sh  (+1 more)
benchmark/: Cargo.toml  Dockerfile
benchmark/scripts/: run-benchmarks.sh
benchmark/src/: main.rs
owl2-reasoner/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  README.md  VERIFICATION_RULES.md  todos.md
owl2-reasoner/.claude/agents/: owl2-code-reviewer.md
owl2-reasoner/benches/: algorithmic_complexity.rs  basic_benchmarks.rs  cache_performance.rs  comprehensive_benchmarks.rs  concurrent_reasoning.rs  iai_callgrind_bench.rs  memory_profiler.rs  memory_safety_benchmarks.rs  memory_tracking_bench.rs  mod.rs  mod_bench.rs  optimization_benchmarks.rs  owl2_benchmarks.rs  parallel_query_bench.rs  parser_bench.rs  performance_optimization_benchmarks.rs  performance_validation.rs  profile_validation_bench.rs  query_bench.rs  query_optimization_bench.rs  rdfxml_parser_bench.rs  reasoning_bench.rs  scalability_bench.rs  scale_testing.rs  simple_benchmarks.rs  simple_performance_validation.rs  standalone_performance_validation.rs  tableaux_benchmarks.rs  tableaux_main.rs
owl2-reasoner/docs/: API_REFERENCE.md  BENCHMARKING.md  EPCIS_ECOSYSTEM_INTEGRATION.md  EXAMPLES_SHOWCASE.md  INTERACTIVE_TUTORIAL.md  MEMORY_SAFE_TESTING.md  QUICK_START.md  README.md  book.toml  memory_tracking.md
owl2-reasoner/docs/analysis/: IMPROVEMENT_PLAN.md  WEAKNESS_ANALYSIS.md
owl2-reasoner/docs/architecture/: ARCHITECTURE.md
owl2-reasoner/docs/guides/: ECOSYSTEM_INTEGRATION.md
owl2-reasoner/docs/performance/: COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  HEAD_TO_HEAD_COMPARISON.md  INDUSTRY_REASONER_ANALYSIS.md  PERFORMANCE_COMPARISON.md  REAL_PERFORMANCE_ANALYSIS.md  performance_comparison_table.txt
owl2-reasoner/docs/plans/: CLAUDE.md  GIT_WORKFLOW.md  MODULARIZATION_STRATEGY.md
owl2-reasoner/docs/project/: CODEBASE_REORGANIZATION_PLAN.md  DOCUMENTATION_GUIDELINES.md  OPENEVOLVE_OPTIMIZATION_PLAN.md  PRODUCTION_READINESS.md  PROJECT_COMPARISON.md  PROJECT_SUCCESS_SUMMARY.md  TESTING_IMPROVEMENT_PLAN.md
owl2-reasoner/docs/reports/: MEMORY_SAFETY_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_SUMMARY.md  README.md
owl2-reasoner/docs/src/: SUMMARY.md  architecture.md  getting-started.md  introduction.md  neurosymbolic-reasoning.md
owl2-reasoner/docs/technical-documentation/: OWL2_Reasoner_Technical_Documentation.typ  README.md
owl2-reasoner/examples/: DISABLED_EXAMPLES.md  cache_usage.rs  compliance_test_simple.rs  ecosystem_integration_examples.rs  gs1_epcis_production_demo.rs  import_resolution_example.rs  parallel_query_demo.rs  performance_optimization_demo.rs  proof_owl2_parsing.rs  python_integration_example.py  reasoning_demonstration.rs  simple_test_runner.rs.disabled  validate_optimizations.rs  w3c_test_runner.rs  web_service_example.rs  working_import_example.rs
owl2-reasoner/examples/advanced/: comparative_analysis.rs  enhanced_memory_profiling.rs  epcis_validation_suite.rs
owl2-reasoner/examples/basic/: biomedical_ontology.rs  family_ontology.rs  json_ld_example.rs  simple_example.rs
owl2-reasoner/examples/validation/: complete_validation.rs  complete_validation_example.rs  empirical_validation.rs  honest_validation.rs
owl2-reasoner/ml/openevolve/: openevolve_config.py  openevolve_config.yaml
owl2-reasoner/myontology/: OWL2_REASONER_RDF_HANDBOOK.md
owl2-reasoner/scripts/: analyze_tableaux_performance.rs  build-technical-docs.sh  coverage.sh  evidence_validation.py  run_benchmarks.sh  run_comprehensive_validation.rs  run_green_group_tests.sh  run_test_with_memory_monitor.sh  run_validation.sh  update_docs.sh  validate_system.sh
owl2-reasoner/src/: cache.rs  cache_manager.rs  config.rs  constants.rs  emergency_protection.rs  entities.rs  epcis.rs  epcis_generator.rs  epcis_parser.rs  epcis_test_generator.rs  error.rs  graceful_degradation.rs  iri.rs  lib.rs  main.rs  memory.rs  memory_aware_allocation.rs  memory_protection.rs  ontology.rs  python_bindings.rs  reasoning.rs  storage.rs  web_service.rs
owl2-reasoner/src/axioms/: class_axioms.rs  class_expressions.rs  core.rs  mod.rs  property_expressions.rs  types.rs
owl2-reasoner/src/datatypes/: mod.rs  value_space.rs
owl2-reasoner/src/optimizations/: memory_optimizations.md
owl2-reasoner/src/parser/: arena.rs  common.rs  import_resolver.rs  mod.rs  owl_xml.rs  rdf_xml.rs  rdf_xml_common.rs  rdf_xml_legacy.rs  rdf_xml_streaming.rs  restriction_parser.rs  turtle.rs
owl2-reasoner/temp_bench/: Cargo.toml
owl2-reasoner/tests/: basic_tests.rs  comprehensive_integration_tests.rs  core_iri_entity_tests.rs  equality_reasoning_comprehensive_tests.rs  equality_reasoning_tests.rs.disabled  import_resolution_tests.rs  integration_end_to_end_tests.rs  memory_management_property_tests.rs  mod.rs  parser_tests.rs  performance_optimization_tests.rs  profile_optimization_comprehensive_tests.rs  profile_optimization_tests.rs  property_based_tests.rs  property_characteristics_reasoning_tests.rs  rdf_xml_streaming_tests.rs  reasoning_engine_property_tests.rs.disabled  rollback_non_deterministic_tests.rs  simple_property_tests.rs  turtle_parser_tests.rs
(+1421 files in other folders)
