[package]
name = "provchain-org"
version = "0.1.0"
edition = "2021"

[lib]
name = "provchain_org"
path = "src/lib.rs"

[dependencies]
oxigraph = { version = "0.4", default-features = false }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# OWL2 library for enhanced ontology support
owl2_rs = { path = "./owl2_rs" }

# Networking dependencies for distributed GraphChain
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography for consensus
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"

# Compression and encoding
lz4 = "1.24"
base64 = "0.21"

# Configuration management
config = "0.13"
toml = "0.8"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = "0.3"

# Web framework and HTTP server for Phase 2
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
http = "1.0"

# JSON Web Tokens for authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Template engine for web interface
askama = { version = "0.12", features = ["with-axum"] }

# Static file serving
tower-serve-static = "0.1"

# Knowledge Graph & Analytics dependencies for Phase 3
petgraph = "0.6"           # Graph algorithms
ndarray = "0.15"           # Numerical computing
geo = "0.26"               # Geographic computations
plotters = "0.3"           # Chart generation
handlebars = "4.0"         # Template engine for reports
regex = "1.0"              # Pattern matching for NLP
lazy_static = "1.4"        # Static initialization

# Performance & Scalability dependencies for Phase 5
num_cpus = "1.0"           # CPU core detection for thread pool sizing

# Production Deployment dependencies for Phase 6
prometheus = "0.13"        # Metrics collection
sysinfo = "0.30"          # System information
env_logger = "0.10"       # Environment-based logging
log = "0.4"               # Logging facade
opentelemetry = "0.21"    # Distributed tracing
opentelemetry-jaeger = "0.20"  # Jaeger tracing backend
metrics = "0.22"          # Metrics collection framework
metrics-exporter-prometheus = "0.13"  # Prometheus metrics exporter
serde_yaml = "0.9"        # YAML configuration support
dirs = "5.0"              # Standard directories
thiserror = "1.0"         # Error handling
async-trait = "0.1"       # Async traits

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json", "multipart"] }
criterion = { version = "0.5", features = ["html_reports"] }

# End-to-End Testing Dependencies
fantoccini = { version = "0.19", features = ["native-tls"] }
webdriver = "0.46"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[features]
e2e = []

[[bench]]
name = "simple_consensus_benchmarks"
harness = false

[[bench]]
name = "trace_optimization_benchmarks"
harness = false

[[test]]
name = "enhanced_traceability_demo"
path = "tests/enhanced_traceability_demo.rs"
harness = false

[[bin]]
name = "demo_ui"
path = "demo_ui.rs"

[[test]]
name = "three_node_validation_test"
path = "tests/three_node_validation_test.rs"
harness = true

