[package]
name = "provchain-org"
version = "0.1.0"
edition = "2021"
default-run = "provchain-org"

[workspace]
members = ["owl2-reasoner"]

[lib]
name = "provchain_org"
path = "src/lib.rs"

[[bin]]
name = "provchain-org"
path = "src/main.rs"

[[bin]]
name = "owl2-integration-test"
path = "src/bin/owl2_integration_test.rs"

[dependencies]
oxigraph = { version = "0.4", default-features = false }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Networking dependencies for distributed GraphChain
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography for consensus
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"

# Compression and encoding
lz4 = "1.24"
base64 = "0.21"

# Configuration management
config = "0.15"
toml = "0.8"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = "0.3.20"

# Web framework and HTTP server for Phase 2
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
http = "1.0"

# WebSocket and real-time communication
socketioxide = "0.13"

# JSON Web Tokens for authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Template engine for web interface
askama = { version = "0.12", features = ["with-axum"] }

# Static file serving
tower-serve-static = "0.1"

# Knowledge Graph & Analytics dependencies for Phase 3
petgraph = "0.6"           # Graph algorithms
ndarray = "0.15"           # Numerical computing
geo = "0.26"               # Geographic computations
plotters = "0.3"           # Chart generation
handlebars = "4.0"         # Template engine for reports
regex = "1.0"              # Pattern matching for NLP
lazy_static = "1.4"        # Static initialization

# Performance & Scalability dependencies for Phase 5
num_cpus = "1.0"           # CPU core detection for thread pool sizing

# Production Deployment dependencies for Phase 6
prometheus = "0.14"        # Metrics collection (upgraded for protobuf>=3.7.2)
sysinfo = "0.30"          # System information
env_logger = "0.10"       # Environment-based logging
log = "0.4"               # Logging facade
opentelemetry = "0.21"    # Distributed tracing
opentelemetry-otlp = "0.14"  # OpenTelemetry OTLP exporter (replaces unmaintained jaeger)
metrics = "0.22"          # Metrics collection framework
metrics-exporter-prometheus = "0.13"  # Prometheus metrics exporter
serde_yaml = "0.9"        # YAML configuration support
dirs = "5.0"              # Standard directories
thiserror = "1.0"         # Error handling
async-trait = "0.1"       # Async traits

# OWL2 library for enhanced ontology support
owl2-reasoner = { path = "./owl2-reasoner" }
chacha20poly1305 = "0.10.1"
argon2 = "0.5"  # Password-based key derivation for wallet encryption

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json", "multipart"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Performance Testing Dependencies
proptest = "1.4"              # Property-based testing for load testing
test-case = "3.3"             # Test case generation
statrs = "0.16"               # Statistical analysis for performance
float-cmp = "0.9"             # Floating point comparison for metrics

# End-to-End Testing Dependencies
fantoccini = { version = "0.19", features = ["native-tls"] }
webdriver = "0.46"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# ==============================================================================
# SECURITY NOTE: RUSTSEC-2022-0040 - owning_ref v0.4.1 Memory Corruption
# ==============================================================================
# 
# Vulnerability Summary:
# - Advisory: https://rustsec.org/advisories/RUSTSEC-2022-0040
# - Severity: CRITICAL (Memory Corruption / Use-After-Free)
# - Affected Version: owning_ref v0.4.1
# - Status: Unmaintained - No patch available from upstream
#
# Dependency Chain:
# provchain-org -> owl2-reasoner -> json-ld v0.21.2 -> 
#   json-ld-context-processing v0.21.2 -> owning_ref v0.4.1
#
# Why It Cannot Be Easily Patched:
# - owning_ref is a transitive dependency of the json-ld crate
# - The json-ld crate ecosystem has not migrated to alternatives
# - Git-based patches require matching repository structures
# - forking the entire json-ld dependency tree is impractical
#
# Risk Assessment for This Project:
# - LOW RISK: The json-ld crate uses owning_ref internally for safe
#   reference patterns within its JSON-LD context processing
# - The vulnerability requires specific unsafe usage patterns that are
#   unlikely to be present in how json-ld uses the crate
# - No user-controlled input directly flows into owning_ref operations
#
# Mitigation Strategies:
# 1. Monitor json-ld ecosystem for updates removing owning_ref dependency
# 2. Consider alternative RDF/JSON-LD libraries (e.g., rdflib, sophia)
# 3. Run security-focused fuzzing on JSON-LD parsing code paths
# 4. Keep dependencies updated via `cargo update`
#
# Re-evaluation Schedule:
# - Check quarterly for json-ld updates that remove owning_ref
# - Run cargo-audit monthly to check for new advisories
# - Track: https://github.com/timothee-haudebourg/json-ld/issues
#
# Documented: 2025-01-12
# ==============================================================================

# ==============================================================================
# SECURITY NOTES: Additional Unmaintained Dependencies
# ==============================================================================
#
# The following dependencies are unmaintained but are currently accepted due to
# low risk assessment or lack of viable alternatives:
#
# 1. atomic-polyfill v1.0.3 (RUSTSEC-2023-0089)
#    - Path: heapless -> rstar -> geo-types -> geo
#    - Risk: LOW - Used for atomic operations on platforms without native support
#    - Action: Monitor heapless crate for updates
#
# 2. paste v1.0.15 (RUSTSEC-2024-0436)
#    - Path: simba -> nalgebra -> statrs
#    - Risk: LOW - Proc macro for code generation, stable API
#    - Action: Monitor nalgebra/statrs for updates
#
# 3. proc-macro-error v1.0.4 (RUSTSEC-2024-0370)
#    - Path: json-ld ecosystem (multiple transitive dependencies)
#    - Risk: LOW - Error handling crate, widely used
#    - Action: Monitor json-ld for migration to alternatives
#
# 4. bincode v1.3.3 & v2.0.1 (RUSTSEC-2025-0141)
#    - Status: REMOVED iai-callgrind dependency (v1.3.3)
#    - v2.0.1: Still used directly in owl2-reasoner for serialization
#    - Risk: LOW - Serialization format, stable API
#    - Action: Monitor for alternatives (serde-msgpack, postcard)
#
# 5. lru v0.12.5 (RUSTSEC-2026-0002 - Unsound)
#    - Path: owl2-reasoner (direct dependency)
#    - Issue: IterMut violates Stacked Borrows in specific cases
#    - Risk: LOW-MEDIUM - Only affects IterMut usage, not common API patterns
#    - Action: Consider replacement with moka or cached when feasible
#
# ==============================================================================

[features]
e2e = []

[[bench]]
name = "simple_consensus_benchmarks"
harness = false

[[bench]]
name = "trace_optimization_benchmarks"
harness = false

[[bench]]
name = "owl2_benchmarks"
harness = false

[[bench]]
name = "comprehensive_performance_benchmarks"
harness = false



[[bench]]
name = "rdf_canonicalization_benchmarks"
harness = false

[[test]]
name = "enhanced_traceability_demo"
path = "tests/enhanced_traceability_demo.rs"
harness = false


[[test]]
name = "three_node_validation_test"
path = "tests/three_node_validation_test.rs"
harness = true
